# scolx-math

./: .editorconfig  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  LICENSE  QWEN.md  README.md  TODO.md  examples.py  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
.qwen/agents/: code-navigator.md  code-quality-improver.md  doc-knowlage-maintainer.md
benchmarks/: heavy_operations.py
docs/: README.md  deployment.md  documentation.md  quick_start.md
scolx_math/: advanced_latex.py
scolx_math/api/: main.py  service.py
scolx_math/core/: __init__.py  operations.py  parsing.py  utils.py
scolx_math/explain/: explainers.py
tests/: conftest.py  test_api.py  test_endpoints_extra.py  test_latex.py  test_latex_parsing_edges.py  test_parsing_edges.py  test_smoke.py
