# Tooling configuration for formatting, linting, and tests

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scolx-math"
version = "0.1.0"
description = "A Python-based mathematical computation service that provides step-by-step solutions to mathematical problems"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache 2.0 License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sympy",
    "symengine",
    "pydantic",
    "antlr4-python3-runtime==4.11",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "httpx",
]

[tool.black]
line-length = 88
target-version = ["py314"]
include = "\\.(py|pyi)$"

[tool.ruff]
line-length = 88
target-version = "py314"
respect-gitignore = true
# Exclude common generated dirs (gitignore also applies)
exclude = [
  ".git",
  ".venv",
  "venv",
  "env",
  "build",
  "dist",
  ".mypy_cache",
  ".ruff_cache",
  ".pytest_cache",
]

[tool.ruff.lint]
# Core rules: pyflakes/pycodestyle + isort imports + some modernizations
select = ["E", "F", "I", "UP", "SIM"]
# Allow lines exceeding length if formatted by Black (Ruff won't enforce E501 strictly)
ignore = ["E501"]

[tool.ruff.format]
# Keep compatible with Black style where possible
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
