# Tooling configuration for formatting, linting, and tests

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scolx-math"
version = "1.0.0"
description = "A Python-based mathematical computation service that provides step-by-step solutions to mathematical problems"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache 2.0 License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sympy",
    "symengine",
    "pydantic",
    "antlr4-python3-runtime==4.11",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "httpx",
]

[tool.black]
line-length = 88
target-version = ["py314"]
include = "\\.(py|pyi)$"

[tool.ruff]
line-length = 88
target-version = "py314"
respect-gitignore = true
# Exclude common generated dirs (gitignore also applies)
exclude = [
  ".git",
  ".venv",
  "venv",
  "env",
  "build",
  "dist",
  ".mypy_cache",
  ".ruff_cache",
  ".pytest_cache",
]

[tool.ruff.lint]
# Extended rules for comprehensive checking including dead code detection
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes (includes F401 unused imports, F841 unused variables)
    "I",    # isort
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "PL",   # pylint (includes unused variables/functions)
    "PT",   # flake8-pytest-style
    "PYI",  # flake8-pyi
    "RUF",  # Ruff-specific rules
    "B",    # flake8-bugbear (includes B008 unused variables in function definitions)
    "C4",   # flake8-comprehensions
    "C9",   # mccabe complexity
    "DTZ",  # flake8-datetimez
    "EXE",  # flake8-executable
    "FA",   # flake8-future-annotations
    "FBT",  # flake8-boolean-trap
    "ICN",  # flake8-import-conventions
    "ISC",  # flake8-implicit-str-concat
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PLR",  # Design related pylint codes (unused functions/methods)
    "RET",  # flake8-return
    "S",    # flake8-bandit
    "W",    # pycodestyle warnings
    "YTT",  # flake8-2020
    "ANN",  # flake8-annotations
    "BLE",  # flake8-blind-except
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "CPY",  # flake8-copyright
    "DJ",   # flake8-django (if applicable)
    "G",    # flake8-logging-format
]
# Allow lines exceeding length if formatted by Black (Ruff won't enforce E501 strictly)
ignore = [
    "E501",  # Line too long (handled by Black)
    "EM",    # flake8-errmsg - allow string literals in exceptions
    "BLE001",  # Allow blind exception catching (sometimes necessary for defensive programming)
    "PLW0603",  # Allow global statements in appropriate contexts (like managing thread pools)
]

[tool.ruff.lint.per-file-ignores]
# Allow asserts in test files
"tests/**/*" = [
    "S101",  # Use of assert detected
    "PLR2004", # Magic value used in comparison
]
# Allow some leniencies in benchmarks
"benchmarks/**/*" = [
    "BLE001", # Do not catch blind exception
]
# Core operations contain intentionally complex logic
"scolx_math/core/operations.py" = [
    "C901",    # function too complex
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
]
# Parsing keeps a local import to avoid circular dependency and boolean flag API
"scolx_math/core/parsing.py" = [
    "PLC0415", # import should be at top-level of a file
    "FBT001",  # boolean-typed positional argument in function definition
    "FBT002",  # boolean default positional argument
]
# Service endpoints accept multiple parameters by design
"scolx_math/api/service.py" = [
    "PLR0913", # too many arguments
    "PLC0415", # local imports for optional deps / avoid circulars
]
"scolx_math/api/main.py" = [
    "C901",    # function too complex
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
]

[tool.ruff.format]
# Keep compatible with Black style where possible
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
